<resources>
    <string name="app_name">OpenFoodFacts</string>

    <string name="product_name">%1$s</string>
    <string name="brand">%1$s</string>

    <string name="nutriscore">Nutriscore : %1$s</string>
    <string name="bar_code">Bar code : %1$s</string>
    <string name="quantity">Quantity : %1$s</string>
    <string name="sold_locations">Sold in : %1$s</string>
    <string name="ingredients">Ingredients : %1$s</string>
    <string name="allergens">Allergen : %1$s</string>
    <string name="additives">Additives : %1$s</string>

    <string name="nutriscore_placeholder">Image of the nutriscore</string>
    <string name="product_placeholder">Image of the product</string>
</resources>